# foldcomp

./: .gitignore  AF-A0A0B7P3V8-F1-model_v1.fcz.comp.csv  AF-A0A0B7P3V8-F1-model_v1.pdb.sideChain.csv  CMakeLists.txt  MANIFEST.in  README.md  build.py  build.sh  foldcomp-py-examples.ipynb  main.cpp  pyproject.toml  setup.py  temp.txt
.github/workflows/: build-asan.yml  build-sanitizer.yml  build-static.yml  lint-python.yml  minimal.yml  python.yml  test-notebook.yml
api/C/: cfoldcomp.cpp  cfoldcomp.h
cmake/: include-what-you-use.imp
foldcomp/: __init__.py  foldcomp.cxx  setup.py  util.py
lib/microtar/: CMakeLists.txt  microtar.c  microtar.h
src/: CMakeLists.txt  aa_sidechain.cpp  aa_sidechain.h  amino_acid.cpp  amino_acid.h  atom_coordinate.cpp  atom_coordinate.h  bond_info.h  compressed_torsion.cpp  compressed_torsion.h  database_reader.cpp  database_reader.h  database_writer.cpp  database_writer.h  dbreader.cpp  dbreader.h  discretizer.cpp  discretizer.h  execution_timer.h  float3d.h  foldcomp.cpp  foldcomp.h  input.cpp  input.h  input_processor.h  main.cpp  nerf.cpp  nerf.h  pdb_reader.cpp  pdb_reader.h  sidechain.cpp  sidechain.h  structure_reader.cpp  structure_reader.h  torsion.xyz.cpp  torsion.xyz.h  torsion_angle.cpp  torsion_angle.h  utility.cpp  utility.h
test/: compressed.fcz.comp.csv  compressed.fcz.comp.xlsx  compressed_cif.fcz.comp.csv  decompressed.pdb.decomp.csv  decompressed_cif.pdb.decomp.csv  example_db  example_db.index  example_db.lookup  example_db.source  example_db.subset  fcz_list.txt  pdb_list.txt  tar_test_input.tar  test.cif.gz.comp.csv  test.cif.gz.sideChain.csv  test.fcz  test.pdb.comp.csv  test.pdb.merged.csv  test.pdb.nobreak.csv  test.pdb.sideChain.csv  test_af.fcz  test_af.plddt  test_af.plddt.tsv  test_fcz.pdb.decomp.csv  test_foldcomp.py  ~$compressed.fcz.comp.xlsx
util/: calculate_rmsd_in_dirs.sh  rmsd_from_pdbs.py
