[build-system]
requires = [
    "setuptools>=42",
    "cmake>=3.22",
    "scikit-build>=0.15.0",
    "ninja; platform_system!='Windows'"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = "*"
skip = "pp* *-win32 *-manylinux_i686 *-musllinux_i686"
test-command = "pytest {project}/test"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
